--- a/Cap_2.tex
+++ b/Cap_2.tex
@@ -1,7 +1,7 @@
 \chapter{Revisión Bibliográfica} \label{chap:Revision}
 El reconocimiento de individuos usando el rostros se realiza a partir de imágenes, las cuales pueden ser estáticas (fotografías) o dinámicas (imágenes de vídeo). En el caso de la vídeo vigilancia se toma en cuenta el hecho que no se tiene control sobre varios factores que influye en proceso de reconocimiento como se explica en la sección \ref{ssc:PlanteamientoProblema}.
 
-Según \textit{surveys} de la literatura como \cite{zhao2003face}, \cite{parmar2014face} y \cite{pandya2013survey} los métodos de reconocimiento de rostros se pueden categorizarse mediante el enfoque en por el cual abordan el problema, es decir como tratan a la imagen del rostro. En la figura \ref{im:metodos} se puede ver algunos algoritmos clasificados por enfoque. Siendo algunos de los más conocidos \acf{LDA} (\cite{zhao1999subspace}), \acf{PCA}(\cite{turk1991eigenfaces}), \acf{EBGM} (\cite{wiskott1997face}). % \cite{zhao2003face}.
+Según \textit{surveys} de la literatura como \cite{zhao2003face}, \cite{parmar2014face} y \cite{pandya2013survey} los métodos de reconocimiento de rostros se pueden categorizarse mediante el enfoque en por el cual abordan el problema, es decir como tratan a la imagen del rostro. En la figura \ref{im:metodos} se puede ver algunos algoritmos clasificados por enfoque. Siendo algunos de los más conocidos \acf{LDA} \citep{zhao1999subspace}, \acf{PCA} \citep{turk1991eigenfaces}, \acf{EBGM} (\cite{wiskott1997face}). % \cite{zhao2003face}.
 \begin{figure}[h]
 \center
 \includegraphics[scale=1]{Metodos}
@@ -56,7 +56,7 @@ En esta sección se hace una breve introducción a los métodos holísticos que 
 Un problema que \ac{PCA} tiene, está relacionado al proceso de reducción en si donde no se sabe que características se están extrayendo y presenta una susceptibilidad a la variación de la data ingresada.
 
 \subsection{\ac{KFA}}
-\ac{KFA} \cite{liu2006capitalize} es un método que capitaliza la técnicas de incremento de la dimensionalidad, donde argumenta que métodos de reducción de dimensionalidad como \ac{PCA} tienen problemas reconociendo patrones complejos como lo es el rostro, por lo tanto es necesario un método que pueda reconocer patrones de alta dimensionalidad.
+\ac{KFA} \citep{liu2006capitalize} es un método que capitaliza la técnicas de incremento de la dimensionalidad, donde argumenta que métodos de reducción de dimensionalidad como \ac{PCA} tienen problemas reconociendo patrones complejos como lo es el rostro, por lo tanto es necesario un método que pueda reconocer patrones de alta dimensionalidad.
 
 \ac{KFA} primero realiza un mapeo del espacio de la información de entrada a un espacio de características de alta dimensionalidad, y después implementa el análisis multiclase de Fisher en dicho espacio de características. \ac{KFA} usa Gabor Wavelets (en la sección \ref{scc::EBGM} se explica con más detalle) como método para incrementar la dimensionalidad.
 
@@ -70,7 +70,7 @@ Un problema que \ac{PCA} tiene, está relacionado al proceso de reducción en si
 \subsection{\acf{LDA}}
 En aplicaciones aplicaciones típicas de reconocimiento de rostros tenemos vectores de imágenes de rostros de enormes dimensiones, y a pesar de ser proyectados en un sub-espacio, la dimensión de las características en varios casos son mayores a centenar, tampoco es conveniente que la dimensión del sub-espacio sea pequeña. %Este problema lleva a lo que se conoce como el fenómeno llamado \textit{dimensionality curse} que se refiere a los problemas se presentan al organizar y analizar data de alta dimensionalidad.
 
-\ac{LDA} usado para el reconocimiento de rostros \cite{zhao1999subspace} es un método holístico que consiste en dos pasos: primero se proyecta la imagen del rostro de su representación original como vector a un sub-espacio de rostro a través de \ac{PCA}, luego usamos LDA para obtener un clasificador lineal en el sub-espacio de rostros creado. El criterio que se usa para determinar la dimensión del sub-espacio permite generar características que separan las clases a través de \ac{LDA} del total de la representación del sub-espacio.
+\ac{LDA} usado para el reconocimiento de rostros \citep{zhao1999subspace} es un método holístico que consiste en dos pasos: primero se proyecta la imagen del rostro de su representación original como vector a un sub-espacio de rostro a través de \ac{PCA}, luego usamos LDA para obtener un clasificador lineal en el sub-espacio de rostros creado. El criterio que se usa para determinar la dimensión del sub-espacio permite generar características que separan las clases a través de \ac{LDA} del total de la representación del sub-espacio.
 
 \ac{LDA} presenta problemas relacionados a \ac{PCA} como poca tolerancia al ruido y su se obtiene datos de entrada con grandes variaciones de iluminación.
 
@@ -84,14 +84,14 @@ En todos ellos no sabemos que características estamos midiendo, en contraste co
 Un enfoque para abordar el reconocimiento de rostros es mediante el uso de modelos para poder hallar características locales las cuales son pueden se ponderadas para hallar una respuesta al reconocimiento de rostros. A continuación mencionamos:
 
 \subsection{\ac{RFG}}
-A diferencia de otros métodos donde se hace una comparación directa entre grafos, \ac{RFG} \cite{kafai2014reference} usa un conjunto de varios rostros en diferentes poses para crear un grupo de referencia(conjunto base) y así hacer una comparación indirecta a través del este conjunto base para ello hace uso de \ac{DCT} para medir la similaridad entre rostros.
+A diferencia de otros métodos donde se hace una comparación directa entre grafos, \ac{RFG} \citep{kafai2014reference} usa un conjunto de varios rostros en diferentes poses para crear un grupo de referencia(conjunto base) y así hacer una comparación indirecta a través del este conjunto base para ello hace uso de \ac{DCT} para medir la similaridad entre rostros.
 A cada imagen del conjunto base se divide entre una malla de 2, 9, 16 hasta llegar a 100 secciones y a cada sección se le aplica una \ac{DCT} para crear un vector de características cada vector de representa a una persona del conjunto base en todas sus pose, y este vector es representado como un nodo en un grafo donde se relaciona con los demás rostros del conjunto base, cualquier nuevo rostro es comparado con este grafo de rostro en función a su similaridad y cercanía a los nodos, para así poder hallar su lugar en el grafo de esta manera los rostros a reconocer se miden en función al grafo de referencia
 
 \subsection{\textit{Face recognition based on multiple facial features}}
-Es un método similar al trabajo original de Wiskott\cite{wiskott1997face} donde también se usa un grafo que representa el rostro donde cada nodo representa un punto de interés el cual contiene un vector de características generado a través de convoluciones usando Gabor wavelet, este método se diferencia por usar solo 17 puntos de interés un una medida de similaridad propuesta como \textit{Two-Layer Nearest Neighbor} \cite{liao2000face} que busca cual similar los cada nodos del grafo con sus respectivas contra partes en los grafos de los rostros a reconocer la similaridad final se calcula como la división de la sumatoria de todos los nodo por los $H$ nodos mas importantes donde el valor de $H$ es definido como 5 por el autor.
+Es un método similar al trabajo original de Wiskott \citep{wiskott1997face} donde también se usa un grafo que representa el rostro donde cada nodo representa un punto de interés el cual contiene un vector de características generado a través de convoluciones usando Gabor wavelet, este método se diferencia por usar solo 17 puntos de interés un una medida de similaridad propuesta como \textit{Two-Layer Nearest Neighbor} \cite{liao2000face} que busca cual similar los cada nodos del grafo con sus respectivas contra partes en los grafos de los rostros a reconocer la similaridad final se calcula como la división de la sumatoria de todos los nodo por los $H$ nodos mas importantes donde el valor de $H$ es definido como 5 por el autor.
 
 \subsection{Local Graph Matching}
-En lugar de usar un solo grafo como EBGM, Local Graph Matching \cite{fazl2007robust} usa un conjunto de grafos de 3 nodos y 3 aristas donde cada nodo es un punto distintivo en la imagen del rostro. para calcular los puntos de interés se calcula en una fase de entrenamiento el rostro medio donde se distinguen los punto con mayor variación estadística, a partir de los puntos encontrados se generan grafos triangulando los puntos que estén mas próximos entre si.
+En lugar de usar un solo grafo como EBGM, Local Graph Matching \citep{fazl2007robust} usa un conjunto de grafos de 3 nodos y 3 aristas donde cada nodo es un punto distintivo en la imagen del rostro. para calcular los puntos de interés se calcula en una fase de entrenamiento el rostro medio donde se distinguen los punto con mayor variación estadística, a partir de los puntos encontrados se generan grafos triangulando los puntos que estén mas próximos entre si.
 Para su fase de reconocimiento se utiliza una convolución con un Gabor wavelet para extraer características y se utiliza similaridad de cosenos para calcular a quien pertenece la imagen a reconocer.
 
 \subsection{3-D Morphable Model}
