--- a/Cap_4.tex
+++ b/Cap_4.tex
@@ -1,4 +1,4 @@
-\chapter{Propuesta} \label{chap:Propuesta}
+\chapter{Modelo Propuesto} \label{chap:Propuesta}
 %parrafo de introduccion recordando objetivo
 %La propuesta de este trabajo de tesis consiste en la adopción y adaptación de técnicas y trabajos ya existentes sobre los cuales, realizar las modificaciones que nos permita reconocer rostros en un contexto de vídeo vigilancia.
 
