Modificaciones en caratula

--- a/tesis.sty
+++ b/tesis.sty
@@ -42,7 +42,7 @@
         \vspace*{\stretch{1}}
     \begin{center}
         \textbf{Universidad Católica San Pablo -- UCSP}\\
-        \textbf{$\,$\mes\ de\ \the\year$\,$ -- Arequipa -- Perú}
+        \textbf{$\,$Febrero\ de\ 2017$\,$ -- Arequipa -- Perú}
     \end{center}
     \pagebreak
     \dedicatoria
@@ -52,7 +52,7 @@
 %Diseí±ando presentación 
 %***************************************************************************** 
 \newcommand{\presentacion}{\gdef\@presentacion}
-\presentacion{Tesis presentada al \\ Centro de Investigación e Innovación en Ciencia de la Computación (RICS) \\ como parte de los requisitos
+\presentacion{Tesis presentada al \\ Departamento de Ciencia de la Computación \\ como parte de los requisitos
 para obtener el grado de \\Maestro en Ciencia de la Computación.}
 
 \newcommand{\presentar}
